Bug 227992 - Search field should not lost focus if nothing was found
Summary: Search field should not lost focus if nothing was found
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Engine (other bugs)
Version First Reported In: 1.1.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-22 00:55 UTC by Tenno Seremel
Modified: 2012-06-27 10:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tenno Seremel 2010-02-22 00:55:00 UTC
Version:           1.1.0-1 (using KDE 4.3.4)
OS:                Linux
Installed from:    Debian testing/unstable Packages

Currently when you search something and nothing was found search field loses its focus. That means you can type right away your new search terms. It should do that only when there was some image to focus.
Comment 1 Andi Clemens 2010-02-22 07:04:31 UTC
Confirmed, this annoyed me too in the last days ;-)
Comment 2 Andi Clemens 2010-02-23 21:03:44 UTC
SVN commit 1095186 by aclemens:

Do not steal focus when using simple search

BUG:227992

 M  +3 -2      NEWS  
 M  +1 -1      utilities/searchwindow/searchtabheader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095186
Comment 3 Tenno Seremel 2010-02-23 21:16:57 UTC
(I haven't seen it yet but) That was fast, thanks :}
Comment 4 Andi Clemens 2010-02-23 21:27:32 UTC
To be more precise: focus was always lost, not only on empty result sets. This also means that if you type too slow, search will be started and focus will be lost.