Do not steal focus when using simple search

BUG:227992

svn path=/trunk/extragear/graphics/digikam/; revision=1095186